--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,13 +1,12 @@
 {
   "manifest_version": 3,
   "name": "__MSG_manifest_name__",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "description": "__MSG_manifest_description__",
   "permissions": ["storage", "unlimitedStorage", "tabs", "favicon", "alarms", "contextMenus", "offscreen"],
   "optional_permissions": [
     "scripting",
-    "history",
-    "downloads"
+    "history"
   ],
   "optional_host_permissions": [
     "https://www.youtube.com/watch*",
